--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@ and much more...
 </span>
 <a class="block-slideshow__item-button" href="Parts/index.html">Find a Part</a
                                 >
-<a href="tel:+18554942886" class="block-slideshow__item-button" style="background: #005e85">Call Now</a>
+<a href="tel:2138027339" class="block-slideshow__item-button" style="background: #005e85">Call Now</a>
 </div>
 <div class="col-lg-7 col-xl-6 d-lg-flex">
 <div class="card">
@@ -875,9 +875,9 @@ Yugo
 <h2>High Quality Used <span class="text-danger">Auto Parts</span></h2>
 </div>
 <div class="col-md-8">
-<p class="lead"><strong>Oscar Garage Auto</strong> gives you access to the largest inventory of used and recycled auto parts. <strong>Engines</strong>, <strong>Transmission</strong>, <strong>Transfer Case</strong>, <strong>Control Module</strong>, <strong>Drive Shaft</strong> etc. You'll find <strong>replacement auto parts</strong> for all auto makes and models including luxury auto brands. Original Equipment Manufacturer (OEM) and high quality after market parts &amp; accessories available at an incredible price. <strong>ARP</strong> offers quality used auto parts for all makes and models of foreign and domestic cars, vans and trucks. Get access to a nationwide inventory of high quality recycled auto parts.</p>
+<p class="lead"><strong>Oscar Garage Auto</strong> gives you access to the largest inventory of used and recycled auto parts. <strong>Engines</strong>, <strong>Transmission</strong>, <strong>Transfer Case</strong>, <strong>Control Module</strong>, <strong>Drive Shaft</strong> etc. You'll find <strong>replacement auto parts</strong> for all auto makes and models including luxury auto brands. Original Equipment Manufacturer (OEM) and high quality after market parts &amp; accessories available at an incredible price. <strong>Oscar Garage Auto</strong> offers quality used auto parts for all makes and models of foreign and domestic cars, vans and trucks. Get access to a nationwide inventory of high quality recycled auto parts.</p>
 <p class="lead"><strong>Oscar Garage Auto</strong> is a BBB Accredited business and operates with highest ethics and standards. We help thousands of customers&nbsp;with high quality <strong>used engines</strong>, <strong>transmissions</strong>, <strong>control modules</strong> etc.</p>
-<p class="lineHeight_30 lead">Request a <a href="Parts/index.html">price quote</a> now or call us between Monday through Friday between 8:30AM-5:30PM EST Toll Free at<strong> <a class="num" href="tel:+18554942886">855-494-AUTO (2886)</a> </strong>and our experienced team will be happy to help you locate the parts you need.</p>
+<p class="lineHeight_30 lead">Request a <a href="Parts/index.html">price quote</a> now or call us between Monday through Friday between 8:30AM-5:30PM EST Toll Free at<strong> <a class="num" href="tel:2138027339">2138027339</a> </strong>and our experienced team will be happy to help you locate the parts you need.</p>
 </div>
 </div>
 </div>
