--- a/About/index.html
+++ b/About/index.html
@@ -78,14 +78,14 @@
 <i class="fas fa-headset"></i> Toll Free:
 </span>
 <span class="topbar__button-title">
-2138027339
+(816)800-8507
 </span>
 </a>
 </div>
 <div class="topbar__item-button">
 <a href="tel:+14077430976" class="topbar__button  py-2">
 <span class="topbar__button-label"><i class="fas fa-phone-square-alt mr-2"></i>Phone:</span>
-<span class="topbar__button-title">2138027339</span>
+<span class="topbar__button-title">(816)800-8507</span>
 </a>
 </div>
 </div>
@@ -154,7 +154,7 @@ Contact
 <div class="justify-content-center row text-center">
 <div class="col-md-10">
 <p class="lead"><strong>Oscar Garage Auto</strong>  is your source of quality used auto parts. ARP specializes in rare, hard to find parts and accessories that may not be available in your local market.&nbsp;Our experienced team can help you find a part across a nationwide inventory.&nbsp;Parts available for all auto makes and models. Recycled Original Equipment Manufacturer (OEM) auto parts and high quality After Market parts available at incredible prices. It is a simple three step process to find and order your parts. Each item is professionally inspected for quality and functionality before leaving the warehouse.</p>
-<p class="lead"><strong>Find your part now,&nbsp; just submit the form below&nbsp;or call us at&nbsp;<a class="num" href="tel:2138027339">2138027339</a></strong>.</p>
+<p class="lead"><strong>Find your part now,&nbsp; just submit the form below&nbsp;or call us at&nbsp;<a class="num" href="tel:(816)800-8507">(816)800-8507</a></strong>.</p>
 </div>
 </div>
 </div>
@@ -347,7 +347,7 @@ Yugo
 <div class="col-md-6">
 <img class="img-fluid  mb-3" loading="lazy" src="../Theme/images/support.png" alt="support" width="100" />
 <p class="text-center">Our experienced team is standing by to help you locate your part.</p>
-<strong class="text-center">2138027339</strong>
+<strong class="text-center">(816)800-8507</strong>
 <div class="form-row justify-content-center mt-3">
 <a href="tel:+18554942886" class="btn btn-primary">Call Now</a>
 </div>
@@ -431,10 +431,10 @@ MO-32, Licking, MO 65542, USA<br />
 </dl>
 <dl class="mb-0">
 <dt></dt>
-<dd><strong>Toll Free:</strong> <a href="tel:+18554942886" class="text-reset"> 2138027339</a></dd>
-<dd><strong>Toll Free:</strong> <a href="tel:+13247541789" class="text-reset"> 2138027339</a></dd>
-<dd><strong>Phone:</strong> <a href="tel:+14077430976" class="text-reset"> 2138027339 </a></dd>
-<dd><strong>Fax:</strong> 2138027339</dd>
+<dd><strong>Toll Free:</strong> <a href="tel:+18554942886" class="text-reset"> (816)800-8507</a></dd>
+<dd><strong>Toll Free:</strong> <a href="tel:+13247541789" class="text-reset"> (816)800-8507</a></dd>
+<dd><strong>Phone:</strong> <a href="tel:+14077430976" class="text-reset"> (816)800-8507 </a></dd>
+<dd><strong>Fax:</strong> (816)800-8507</dd>
 </dl>
 </div>
 </div>
@@ -557,7 +557,7 @@ Contact
 <div class="modal-body text-center">
 <i class="text-success far fa-check-circle fa-5x"></i>
 <h3>Parts Available!</h3>
-<p>Call us at 2138027339.</p>
+<p>Call us at (816)800-8507.</p>
 
 <a href="tel:+18554942886" class="block-slideshow__item-button mt-1 mb-3" style="background: #005e85;opacity: 1;">Call Now</a>
 </div>
