--- a/Contact/index.html
+++ b/Contact/index.html
@@ -78,14 +78,14 @@
 <i class="fas fa-headset"></i> Toll Free:
 </span>
 <span class="topbar__button-title">
-2138027339
+(816)800-8507
 </span>
 </a>
 </div>
 <div class="topbar__item-button">
 <a href="tel:+14077430976" class="topbar__button  py-2">
 <span class="topbar__button-label"><i class="fas fa-phone-square-alt mr-2"></i>Phone:</span>
-<span class="topbar__button-title">2138027339</span>
+<span class="topbar__button-title">(816)800-8507</span>
 </a>
 </div>
 </div>
@@ -173,11 +173,11 @@ Contact
 MO-32, Licking, MO 65542, USA<br />
 United States
 </address>
-<strong>Toll Free:</strong> <a class="num" href="tel:+18554942886"> 2138027339</a>
+<strong>Toll Free:</strong> <a class="num" href="tel:+18554942886"> (816)800-8507</a>
 <br />
-<strong>Toll Free:</strong> <a class="num" href="tel:+13247541789"> 2138027339</a>
+<strong>Toll Free:</strong> <a class="num" href="tel:+13247541789"> (816)800-8507</a>
 <br />
-<strong>Local:</strong> <a class="num" href="tel:+14077430976">2138027339</a>
+<strong>Local:</strong> <a class="num" href="tel:+14077430976">(816)800-8507</a>
 <br />
 
 <br />
@@ -227,7 +227,7 @@ Monday-Friday: <br />
 <div class="col-md-6">
 <img class="img-fluid  mb-3" loading="lazy" src="../Theme/images/support.png" alt="support" width="100" />
 <p class="text-center">Our experienced team is standing by to help you locate your part.</p>
-<strong class="text-center">2138027339</strong>
+<strong class="text-center">(816)800-8507</strong>
 <div class="form-row justify-content-center mt-3">
 <a href="tel:+18554942886" class="btn btn-primary">Call Now</a>
 </div>
@@ -309,9 +309,9 @@ MO-32, Licking, MO 65542, USA<br />
 <li><a href="mailto:oscargarageauto@gmail.com"><i class="far fa-envelope"></i> oscargarageauto@gmail.com</a></li></dl>
 <dl class="mb-0">
 <dt></dt>
-<dd><strong>Toll Free:</strong> <a href="tel:2138027339" class="text-reset"> 2138027339</a></dd>
-<dd><strong>Toll Free:</strong> <a href="tel:2138027339" class="text-reset"> 2138027339</a></dd>
-<dd><strong>Phone:</strong> <a href="tel:2138027339" class="text-reset"> 2138027339 </a></dd>
+<dd><strong>Toll Free:</strong> <a href="tel:(816)800-8507" class="text-reset"> (816)800-8507</a></dd>
+<dd><strong>Toll Free:</strong> <a href="tel:(816)800-8507" class="text-reset"> (816)800-8507</a></dd>
+<dd><strong>Phone:</strong> <a href="tel:(816)800-8507" class="text-reset"> (816)800-8507 </a></dd>
 <
 </dl>
 </div>
@@ -431,9 +431,9 @@ Contact
 <div class="modal-body text-center">
 <i class="text-success far fa-check-circle fa-5x"></i>
 <h3>Parts Available!</h3>
-<p>Call us at 2138027339.</p>
+<p>Call us at (816)800-8507.</p>
 
-<a href="tel:2138027339" class="block-slideshow__item-button mt-1 mb-3" style="background: #005e85;opacity: 1;">Call Now</a>
+<a href="tel:(816)800-8507" class="block-slideshow__item-button mt-1 mb-3" style="background: #005e85;opacity: 1;">Call Now</a>
 </div>
 </div>
 </div>
