--- a/Part_Policy/index.html
+++ b/Part_Policy/index.html
@@ -78,7 +78,7 @@
 <i class="fas fa-headset"></i> Toll Free:
 </span>
 <span class="topbar__button-title">
-2138027339
+(816)800-8507
 </span>
 </a>
 </div>
@@ -465,9 +465,9 @@ Yugo
 <div class="col-md-6">
 <img class="img-fluid  mb-3" loading="lazy" src="../Theme/images/support.png" alt="support" width="100" />
 <p class="text-center">Our experienced team is standing by to help you locate your part.</p>
-<strong class="text-center">2138027339</strong>
+<strong class="text-center">(816)800-8507</strong>
 <div class="form-row justify-content-center mt-3">
-<a href="tel:2138027339" class="btn btn-primary">Call Now</a>
+<a href="tel:(816)800-8507" class="btn btn-primary">Call Now</a>
 </div>
 </div>
 </div>
@@ -549,9 +549,9 @@ Recycled &amp; used parts available for all types of vehicles including cars, va
 </dl>
 <dl class="mb-0">
 <dt></dt>
-<dd><strong>Toll Free:</strong> <a href="tel:+18554942886" class="text-reset"> 2138027339</a></dd>
-<dd><strong>Toll Free:</strong> <a href="tel:+13247541789" class="text-reset"> 2138027339</a></dd>
-<dd><strong>Phone:</strong> <a href="tel:+14077430976" class="text-reset"> 2138027339 </a></dd>
+<dd><strong>Toll Free:</strong> <a href="tel:+18554942886" class="text-reset"> (816)800-8507</a></dd>
+<dd><strong>Toll Free:</strong> <a href="tel:+13247541789" class="text-reset"> (816)800-8507</a></dd>
+<dd><strong>Phone:</strong> <a href="tel:+14077430976" class="text-reset"> (816)800-8507 </a></dd>
 
 </dl>
 </div>
@@ -678,7 +678,7 @@ Contact
 <div class="modal-body text-center">
 <i class="text-success far fa-check-circle fa-5x"></i>
 <h3>Parts Available!</h3>
-<p>Call us at 2138027339.</p>
+<p>Call us at (816)800-8507.</p>
 
 <a href="tel:+18554942886" class="block-slideshow__item-button mt-1 mb-3" style="background: #005e85;opacity: 1;">Call Now</a>
 </div>
