--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <div class="topbar__item-button">
 <a href="tel:+14077430976" class="topbar__button  py-2">
 <span class="topbar__button-label"><i class="fas fa-phone-square-alt mr-2"></i>Phone:</span>
-<span class="topbar__button-title">213-802-7339</span>
+<span class="topbar__button-title">(816)800-8507</span>
 </a>
 </div>
 </div>
@@ -163,7 +163,7 @@ else.
 </p>
 <a class="block-slideshow__item-button" href="Parts/index.html">Find a Part</a
                                 >
-<a href="tel:213-802-7339" class="block-slideshow__item-button" style="background: #005e85">Call Now</a>
+<a href="tel:(816)800-8507" class="block-slideshow__item-button" style="background: #005e85">Call Now</a>
 </div>
 <div class="col-lg-7 col-xl-6 d-lg-flex">
 <div class="card">
@@ -1444,7 +1444,7 @@ Yugo
 <div class="col-md-6">
 <img class="img-fluid  mb-3" loading="lazy" src="Theme/images/support.png" alt="support" width="100" />
 <p class="text-center">Our experienced team is standing by to help you locate your part.</p>
-<strong class="text-center">213-802-7339</strong>
+<strong class="text-center">(816)800-8507</strong>
 <div class="form-row justify-content-center mt-3">
 <a href="tel:+18554942886" class="btn btn-primary">Call Now</a>
 </div>
@@ -1529,9 +1529,9 @@ MO-32, Licking, MO 65542, USA<br />
 </dl>
 <dl class="mb-0">
 <dt></dt>
-<dd><strong>Toll Free:</strong> <a href="tel:213-802-7339" class="text-reset"> 213-802-7339</a></dd>
-<dd><strong>Toll Free:</strong> <a href="tel:213-802-7339" class="text-reset"> 213-802-7339</a></dd>
-<dd><strong>Phone:</strong> <a href="tel:213-802-7339" class="text-reset"> 213-802-7339 </a></dd>
+<dd><strong>Toll Free:</strong> <a href="tel:(816)800-8507" class="text-reset"> (816)800-8507</a></dd>
+<dd><strong>Toll Free:</strong> <a href="tel:(816)800-8507" class="text-reset"> (816)800-8507</a></dd>
+<dd><strong>Phone:</strong> <a href="tel:(816)800-8507" class="text-reset"> (816)800-8507 </a></dd>
 </dl>
 </div>
 </div>
@@ -1654,9 +1654,9 @@ Contact
 <div class="modal-body text-center">
 <i class="text-success far fa-check-circle fa-5x"></i>
 <h3>Parts Available!</h3>
-<p>Call us at 213-802-7339.</p>
+<p>Call us at (816)800-8507.</p>
 
-<a href="tel:213-802-7339" class="block-slideshow__item-button mt-1 mb-3" style="background: #005e85;opacity: 1;">Call Now</a>
+<a href="tel:(816)800-8507" class="block-slideshow__item-button mt-1 mb-3" style="background: #005e85;opacity: 1;">Call Now</a>
 </div>
 </div>
 </div>
